css/layout.css
.logos{
    margin-left: 90%;
    font-size: 50px;
    position: fixed;
}

.sidebar{
    width: 90px;
    background-color:black;
    height: 100%;
    position: fixed;
    top: 0;
    overflow-x: hidden;
}

.sidebar a{
    display: block;
    text-align: center;
    padding: 50%;
    padding-left: 0%;
    transition: all 0.3s ease;
    font-size: 70px;
    color: white;
    text-decoration: none
}

.sidebar a:hover{
    background-color:rgb(206, 201, 201);
}

.home{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    width: 100%;
    height: 100vh;
    color: white;
    font-size: large;
}
.aboutme{
    display: flex;
    flex-direction: row;
    align-items: center;
    text-align: center;
    width: 100%;
    height: 100vh;
    color: white;
    font-size: large;
    
}
.aboutme_text{
    padding: 8%;
    padding-bottom: 13%;
}
.aboutme p{
    font-size: xx-large;
}
.project{
    width: 100%;
    height: 100vh;
    color: white;
    font-size: large;
    display: grid;
    grid-template-columns: repeat(2, 4fr);
    padding-top: 70px;
}
.container > div{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
   padding-bottom: 4px;
}
.contact{
    width: 100%;
    height: 100vh;
    color: white;
    font-size: x-large;
}
.contact_message{
    margin-left: 15%;
    padding-top: 5%;
}
.contact_logo{
  padding-left: 15%;
  padding-top: 2px;
}
input[type=text], select, textarea {
    
    width: 70%;
    border-radius: 4px;
    margin-top: 8px;
    margin-left: 10%;
}
input[type = submit]:hover{
    background-color: white;
}
.contacts_info {
    display: flex;
    padding-left: 10rem;
    height: 50%;
}
.info{
    padding-top: 10px;
}
.form {
    margin-left: 5%;
    width: 40%;
    height: 100%;
    text-align: center;
}

input[type=text], select, textarea {
    color: white;
    width: 100%;
    padding: 15px;
    border: 3px solid white;
    border-radius: 4px;
    resize: vertical;
}

